--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -16,9 +16,17 @@
 
   <app-explore-container name="Tab 2 page"></app-explore-container>
 
-  <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let photo of photoservice.photos; index as position">
+        <ion-img [src]="photo.webviewPath"></ion-img>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-fab slot="fixed" vertical="bottom" horizontal="center">
     <ion-fab-button (click)="addPhotoToGallery()">
-      <ion-icon name="add"></ion-icon>
+      <ion-icon name="camera"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
